<resources>
    <string name="app_name">Melor Loja Cliente</string>
    <string name="login">Login</string>
    <string name="next">Próximo</string>
    <string name="name">Nome</string>
    <string name="_55">+55</string>
    <string name="phone">Telefone</string>
    <string name="confirm_code">Confirmar código</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="choose_date">Escolha a data</string>
    <string name="confirm">Confirmar</string>
    <string name="yes">Sim</string>
    <string name="error">Erro</string>
    <string name="close">Fechar</string>
    <string name="message">Mensagem</string>
    <string name="success">Sucesso</string>
    <string name="invalid_phone">Telefone invalido</string>
    <string name="invalid_sms_code">"Código invalido, tente novamente "</string>
    <string name="full_name">Nome completo</string>
    <string name="full_address">Endereço completo</string>
    <string name="birthday">Aniversário</string>
    <string name="invalid_name">Digite o nome completo</string>
    <string name="invalid_address">Endereço tem que ter no minimo 4 caracteres</string>
    <string name="home">Home</string>
    <string name="orders">Pedidos</string>
    <string name="profile">Perfil</string>
    <string name="basket">Cesta</string>
    <string name="search">Procurar</string>
    <string name="reference">REF</string>
    <string name="size">Tamanho</string>
    <string name="stock">Estoque</string>
    <string name="my_orders">Meus pedidos</string>
    <string name="branches">Filiais</string>
    <string name="service">Serviço</string>
    <string name="settings">Configurações</string>
    <string name="delete_message">Você realmente quer excluir %1$s?</string>
    <string name="empty_list">Nenhum registro encontrado</string>
    <string name="add_to_basket">Adicionara a cesta</string>
    <string name="in_basket">Na cesta</string>
    <string name="confirm_order">Confirmar pedido</string>
    <string name="order_value">Valor do pedido</string>
    <string name="description">Descrição</string>
    <string name="delivery_method">Método de Entrega</string>
    <string name="pick_up_in_store">Retirar na loja</string>
    <string name="delivery">Entrega</string>
    <string name="delivery_address">Endereço de entrega</string>
    <string name="observation">Observação</string>
    <string name="add_observation">Adicionar observação</string>
    <string name="products">Produtos</string>
    <string name="itaperuna">Itaperuna</string>
    <string name="enable_location">Habilitar localização</string>
    <string name="enable_location_message">O GPS está desativado.\\nAtive a geolocalização</string>
    <string name="location_settings">Ligar</string>
    <string name="permission_approved_explanation">Você aprovou o layout FINE, continue (e clique) mais!</string>
    <string name="fine_permission_denied_explanation">A permissão para determinar a localização exata foi negada, mas é necessária para funções essenciais.</string>
</resources>