<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_input_layout_full_name"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_std"
            android:layout_marginTop="@dimen/margin_extra_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_edit_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:inputType="textCapWords|textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_input_layout_phone"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_std"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_input_layout_full_name">

            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/register_edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:importantForAutofill="no"
                android:focusable="false"
                android:inputType="phone"
                android:minEms="4"
                app:mask="+55 ## ##### ####"
                tools:ignore="TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_input_layout_address"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_std"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_input_layout_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_address"
                android:inputType="textCapWords|textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_input_layout_birthday"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_std"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_extra_large"
            app:layout_constraintBottom_toTopOf="@+id/register_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_input_layout_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_edit_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_calendar"
                android:focusable="false"
                android:hint="@string/birthday"
                android:inputType="date"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.example.melorlojacliente.commom.view.LoadingButton
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_semi_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_input_layout_birthday"
            app:text="@string/save" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>