<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="8dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/basket_img_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_left"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/sf_pro_semi_bold"
            android:text="@string/confirm_order"
            android:textColor="@color/black"
            android:textSize="17sp" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/basket_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_std"
            android:background="@drawable/bg_products_list_item"
            android:padding="8dp"
            tools:ignore="UselessParent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/basket_products_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="6dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_basket_products_list" />

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_std"
        android:background="@drawable/bg_products_list_item"
        android:padding="@dimen/margin_small"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="@dimen/margin_nrl"
            android:fontFamily="@font/sf_pro_semi_bold"
            android:text="@string/order_value"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/basket_txt_order_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_nrl"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/sf_pro_semi_bold"
            android:textColor="@color/black"
            android:textSize="17sp"
            tools:text="R$ 75,00" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/basket_btn_confirm_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_to_basket_btn"
        android:text="@string/confirm"
        android:textColor="@color/white" />

</LinearLayout>