<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.LoginActivity">

    <RelativeLayout
        android:id="@+id/login_action_bar_container"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/sf_pro_semi_bold"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_action_bar_container"
        app:layout_constraintVertical_bias="0.4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessLeaf">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_edit_ccp_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:boxCornerRadiusBottomEnd="@dimen/margin_std"
                app:boxCornerRadiusBottomStart="@dimen/margin_std"
                app:boxCornerRadiusTopEnd="@dimen/margin_small"
                app:boxCornerRadiusTopStart="@dimen/margin_std">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/login_edit_ccp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:ccp_autoDetectLanguage="true"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_showFullName="false"
                    app:ccp_showNameCode="false"
                    app:ccp_showPhoneCode="true"
                    app:ccp_textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_edit_phone_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_std"
                android:layout_weight="2"
                app:boxCornerRadiusBottomEnd="@dimen/margin_std"
                app:boxCornerRadiusBottomStart="@dimen/margin_std"
                app:boxCornerRadiusTopEnd="@dimen/margin_std"
                app:boxCornerRadiusTopStart="@dimen/margin_std">

                <com.vicmikhailau.maskededittext.MaskedEditText
                    android:id="@+id/login_edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:minEms="4"
                    app:mask="## ##### ####"
                    tools:ignore="TextFields" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_to_basket_btn"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>